Add ability to run demos

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
 
     <!-- versions -->
     <args4j.version>2.0.9</args4j.version>
+    <aesh.version>0.49</aesh.version>
     <junit.version>4.11</junit.version>
+    <jandex.version>1.1.0.Final</jandex.version>
+    <logging.version>3.1.4.GA</logging.version>
     <sigar.version>1.6.5.132-5</sigar.version>
     <arg></arg>
   </properties>
@@ -39,6 +42,22 @@
         <version>${sigar.version}</version>
         <scope>runtime</scope>
         <type>zip</type>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.aesh</groupId>
+        <artifactId>aesh</artifactId>
+        <version>${aesh.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss</groupId>
+        <artifactId>jandex</artifactId>
+        <version>${jandex.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss.logging</groupId>
+        <artifactId>jboss-logging</artifactId>
+        <version>${logging.version}</version>
       </dependency>
 
       <dependency>
