--- a/demos-common/pom.xml
+++ b/demos-common/pom.xml
@@ -24,6 +24,21 @@
       </dependency>
 
       <dependency>
+        <groupId>org.jboss.aesh</groupId>
+        <artifactId>aesh</artifactId>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss</groupId>
+        <artifactId>jandex</artifactId>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.logging</groupId>
+        <artifactId>jboss-logging</artifactId>
+      </dependency>
+
+      <dependency>
         <groupId>org.hyperic</groupId>
         <artifactId>sigar</artifactId>
       </dependency>
@@ -34,4 +49,36 @@
       </dependency>
   </dependencies>
 
+
+  <build>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-assembly-plugin</artifactId>
+           <version>2.3</version>
+           <executions>
+             <execution>
+              <id>create-cli</id>
+               <phase>package</phase>
+               <goals>
+                 <goal>single</goal>
+               </goals>
+               <configuration>
+                 <appendAssemblyId>true</appendAssemblyId>
+                 <archive>
+                   <manifestEntries>
+                     <Main-Class>org.jboss.demos.Main</Main-Class>
+                   </manifestEntries>
+                 </archive>
+                 <descriptors>
+                   <descriptor>cli.xml</descriptor>
+                 </descriptors>
+               </configuration>
+             </execution>
+           </executions>
+           <inherited>true</inherited>
+         </plugin>
+    </plugins>
+  </build>
 </project>
