--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.jboss.demos</groupId>
-  <artifactId>demos-common</artifactId>
+  <artifactId>common</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
     <groupId>org.jboss.demos</groupId>
-    <artifactId>demos-parent</artifactId>
+    <artifactId>demos</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
