--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.jboss.demos</groupId>
-  <artifactId>demos-parent</artifactId>
+  <artifactId>demos</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -24,7 +24,7 @@
   </properties>
 
   <modules>
-    <module>demos-common</module>
+    <module>common</module>
   </modules>
 
  <!-- Dependencies version and common configurations -->
