--- a/common/.classpath
+++ b/common/.classpath
@@ -8,6 +8,7 @@
   <classpathentry kind="var" path="M2_REPO/org/jboss/aesh/aesh/0.49/aesh-0.49.jar" sourcepath="M2_REPO/org/jboss/aesh/aesh/0.49/aesh-0.49-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/fusesource/jansi/jansi/1.11/jansi-1.11.jar" sourcepath="M2_REPO/org/fusesource/jansi/jansi/1.11/jansi-1.11-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/jandex/1.1.0.Final/jandex-1.1.0.Final.jar" sourcepath="M2_REPO/org/jboss/jandex/1.1.0.Final/jandex-1.1.0.Final-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.4.GA/jboss-logging-3.1.4.GA.jar" sourcepath="M2_REPO/org/jboss/logging/jboss-logging/3.1.4.GA/jboss-logging-3.1.4.GA-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hyperic/sigar/1.6.5.132-5/sigar-1.6.5.132-5.jar" sourcepath="M2_REPO/org/hyperic/sigar/1.6.5.132-5/sigar-1.6.5.132-5-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar" sourcepath="M2_REPO/junit/junit/4.11/junit-4.11-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar"/>
